# nanoalloc

./: .gitignore  CMakeLists.txt  Makefile  README.md  TAGS  ld_preload_runner.sh
.github/workflows/: ci.yml
docs/: BACKLOG.org  readings.md
include/: hook.h  na_alloc_config.h  na_alloc_size.h  na_version.h  nanoalloc.h  util.h
src/: hook.c  nanoalloc.c
src/hook/: hook.c
tests/: Makefile  build_main_test.sh  calloc.c  main  main.c  smoke.c  test2.c  test3.c  test_alloc.c  test_free.c  test_realloc.c
